--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="">
-            <img src="/images/webstudio.svg" alt="логотип сайта">
-        </a>
+        <p lang="en">WebStudio</p>
         <nav>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -23,7 +21,7 @@
     </header>
     <main>
         <section>
-            <H1>Эффективные решения для вашего бизнеса</H1>
+            <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
         <section>
@@ -50,13 +48,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="/images/image1.jpg" alt="набор кода" width="370" height="294">
+                    <img src="./images/image1.jpg" alt="набор кода" width="370" height="294">
                 </li>
                 <li>
-                    <img src="/images/image2.jpg" alt="синхронизация с телефона" width="370" height="294">
+                    <img src="./images/image2.jpg" alt="синхронизация с телефона" width="370" height="294">
                 </li>
                 <li>
-                    <img src="/images/image3.jpg" alt="выбор цвета" width="370" height="294">
+                    <img src="./images/image3.jpg" alt="выбор цвета" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -64,22 +62,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="/images/img4.jpg" alt="мужчина" width="270" height="260">
+                    <img src="./images/img4.jpg" alt="мужчина" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/img5.jpg" alt="девушка" width="270" height="260">
+                    <img src="./images/img5.jpg" alt="девушка" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/img6.jpg" alt="мужчина" width="270" height="260">
+                    <img src="./images/img6.jpg" alt="мужчина" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/img7.jpg" alt="мужчина" width="270" height="260">
+                    <img src="./images/img7.jpg" alt="мужчина" width="270" height="260">
                     <h3>Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
@@ -87,9 +85,7 @@
         </section>
     </main>
     <footer>
-        <a href="">
-            <img src="/images/webstudio.svg" alt="логотип сайта">
-        </a>
+        <p lang="en">WebStudio</p>
         <address>
             <ul>
                 <li><a href="https://goo.gl/maps/RggWu3k9mETqc1mK9" target="_blank" rel="noopener nofollow noreferrer">г.
