--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <p lang="en">WebStudio</p>
         <nav>
             <ul>
+                <li><a href="" lang="en">WebStudio</a></li>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
@@ -85,7 +85,7 @@
         </section>
     </main>
     <footer>
-        <p lang="en">WebStudio</p>
+        <a href="" lang="en">WebStudio</a>
         <address>
             <ul>
                 <li><a href="https://goo.gl/maps/RggWu3k9mETqc1mK9" target="_blank" rel="noopener nofollow noreferrer">г.
